--- a/client/src/components/Sidebar.module.css
+++ b/client/src/components/Sidebar.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     width: 90%;
     /* background-color: red; */
     height: 100vh;
@@ -7,12 +7,12 @@
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 100%;
     gap: 0;
-    transition:all ease-in 0.5s;
+    transition: all ease-in 0.5s;
     position: absolute;
     z-index: 3;
 }
 
-.navbar{
+.navbar {
     padding: 1rem 0;
     background-color: #364243;
     display: flex;
@@ -21,51 +21,51 @@
     gap: 2rem;
 }
 
-.contactContainer{
-    background-color: #3F4E4F;
+.contactContainer {
+    background-color: #3f4e4f;
     padding: 1rem 0.5rem;
     height: 100%;
     overflow: hidden;
     height: 100%;
 }
 
-.searchContainer{
+.searchContainer {
     padding: 0rem 0.5rem;
     width: 100%;
     height: 70px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border-bottom: 1.5px solid #1E2525;
+    border-bottom: 1.5px solid #1e2525;
 }
 
-.search{
+.search {
     height: 2.5rem;
     width: 100%;
     outline: none;
     padding: 0 0.7rem;
-    border-radius: 20px;
+    border-radius: 5px;
     border: none;
     background-color: white;
 }
 
-.search::placeholder{
+.search::placeholder {
 }
 
-.contactWrapper{
+.contactWrapper {
     height: calc(100% - 45px);
     overflow-y: scroll;
 }
 
-.linkContainer{
+.linkContainer {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .6rem;
+    gap: 0.6rem;
 }
 
-.linkItem{
+.linkItem {
     width: 65%;
     aspect-ratio: 1;
     background-color: #495758;
@@ -74,23 +74,23 @@
     align-items: center;
     justify-content: center;
 }
-.linkItem:hover{
+.linkItem:hover {
     background-color: #68797a;
 }
 
-.linkImage{
+.linkImage {
     width: 40%;
     /* height: 100%; */
     object-fit: contain;
 }
 
-.linkComp{
+.linkComp {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.profilePict{
+.profilePict {
     border-radius: 50%;
     width: 90%;
     aspect-ratio: 1;
@@ -98,21 +98,21 @@
     border: 2px solid #68797a;
 }
 
-.profilePict img{
+.profilePict img {
     width: 100%;
     object-fit: cover;
 }
 
 @media only screen and (min-width: 768px) {
-    .container{
+    .container {
         min-width: 350px;
         width: 100%;
-        max-width:450px;
+        max-width: 450px;
         position: static;
         z-index: 1;
     }
 
-    .contactWrapper{
+    .contactWrapper {
         height: calc(100% - 45px);
         overflow-y: auto;
     }
