--- a/client/src/pages/Chat.module.css
+++ b/client/src/pages/Chat.module.css
@@ -1,6 +1,7 @@
 .container{
     width: 100vw;
     height: 100svh;
+    min-height: 800px;
     overflow: hidden;
     background-color: #BDCDD6;
     position: relative;
