--- a/client/src/pages/Login.module.css
+++ b/client/src/pages/Login.module.css
@@ -1,15 +1,20 @@
-.container{
+.container {
     width: 100vw;
     height: 100svh;
+    min-height: 800px;
     overflow: hidden;
-    background: rgb(34,193,195);
-    background: linear-gradient(40deg, rgba(34,193,195,1) 5%, rgba(233,100,121,1) 80%);
+    background: rgb(34, 193, 195);
+    background: linear-gradient(
+        40deg,
+        rgba(34, 193, 195, 1) 5%,
+        rgba(233, 100, 121, 1) 80%
+    );
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.content{
+.content {
     width: 90%;
     max-width: 500px;
     background-color: #495758;
@@ -22,7 +27,7 @@
     gap: 1rem;
 }
 
-.content button{
+.content button {
     width: 100%;
     height: 60px;
     background-color: white;
@@ -30,17 +35,17 @@
     outline: none;
     display: flex;
     align-items: center;
-    padding: 0.2rem .5rem;
+    padding: 0.2rem 0.5rem;
     border-radius: 10px;
     gap: 2rem;
     cursor: pointer;
 }
 
-.icon{
+.icon {
     height: 80%;
 }
 
-.content button p{
+.content button p {
     font-size: 1.2rem;
     font-weight: 700;
 }
